[package]
name = "notify-receive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
gtk = "0.17.1"
mpsc = "0.1.0"
nohash-hasher = "0.2.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
unix-named-pipe = "0.2.0"
zbus = "3.10.0"
